Price, Crypto, Play, Search - Working

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         </p>
         <p>Skyla How's <span>Weather</span> outside</p>
         <p>Skyla I wanna <span>buy</span> iphone 11</p>
-        <p>Skyla Can you compare<span>prices</span> iphone 11</p>
-        <p>Skyla <span>Play</span>Watermelon Sugar (Any song or a video)</p>
+        <p>Skyla Can you compare <span>prices</span> iphone 11</p>
+        <p>Skyla <span>Play</span> Watermelon Sugar (Any song or a video)</p>
         <p>Skyla get me <span>directions</span> to kashmir</p>
       </div>
       <div class="command">
-        <p class="output">The rel Text</p>
+        <p class="output">Come on Say Something</p>
       </div>
       <button id="listen" class="red-color">
         <svg
