Take Notes and Search for Them Added

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
         <h4>The Automation Assistant</h4>
         <h2>Try These</h2>
         <!-- Commands -->
-        <p>Skyla How's <span>Crypto</span> doing today.</p>
+        <p>Skyla > How's <span>Crypto</span> doing today.</p>
         <p>
-          Skyla <span>Search | Show</span> Covid Cases in <span>Delhi</span>.
+          Skyla > <span>Search | Show</span> Covid Cases in <span>Delhi</span>.
         </p>
-        <p>Skyla How's <span>Weather</span> outside</p>
-        <p>Skyla I wanna <span>buy</span> iphone 11</p>
-        <p>Skyla Can you compare <span>prices</span> iphone 11</p>
-        <p>Skyla <span>Play</span> Watermelon Sugar (Any song or a video)</p>
-        <p>Skyla get me <span>directions</span> to kashmir</p>
+        <p>Skyla > How's <span>Weather</span> outside</p>
+        <p>Skyla > Can you compare <span>prices</span> iphone 11</p>
+        <p>Skyla > <span>Play</span> Watermelon Sugar (Any song or a video)</p>
+        <p>Skyla > get me <span>directions</span> to kashmir</p>
+        <p>
+          Skyla > Take a <span>Note</span> ......... with a
+          <span>Title</span> .............
+        </p>
       </div>
       <div class="command">
         <p class="output">Come on Say Something</p>
