--- a/index.html
+++ b/index.html
@@ -15,17 +15,16 @@
         <h4>The Automation Assistant</h4>
         <h2>Try These</h2>
         <!-- Commands -->
-        <p>Skyla > How's <span>Crypto</span> doing today.</p>
+        <p>Skyla How's <span>Crypto</span> doing today.</p>
         <p>
-          Skyla > <span>Search | Show</span> Covid Cases in <span>Delhi</span>.
+          Skyla <span>Search | Show</span> Covid Cases in <span>Delhi</span>.
         </p>
-        <p>Skyla > How's <span>Weather</span> outside</p>
-        <p>Skyla > Can you compare <span>prices</span> iphone 11</p>
-        <p>Skyla > <span>Play</span> Watermelon Sugar (Any song or a video)</p>
-        <p>Skyla > get me <span>directions</span> to kashmir</p>
+        <p>Skyla How's <span>Weather</span> outside</p>
+        <p>Skyla Can you compare <span>prices</span> iphone 11</p>
+        <p>Skyla <span>Play</span> Watermelon Sugar (Any song or a video)</p>
+        <p>Skyla get me <span>directions</span> to kashmir</p>
         <p>
-          Skyla > Take a <span>Note</span> ......... with a
-          <span>Title</span> .............
+          Skyla Take a <span>Note</span> .... with a <span>Title</span> .....
         </p>
       </div>
       <div class="command">
@@ -51,12 +50,6 @@
         </svg>
       </button>
     </div>
-
-    <!-- <div>
-      <p class="phrase">Phrase...</p>
-      <p class="result">Right or wrong?</p>
-    </div> -->
-
     <script src="./assets/script.js"></script>
   </body>
 </html>
