--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <div class="command">
         <p class="output">Come on Say Something</p>
       </div>
-      <button id="listen" class="red-color">
+      <button id="listen" class="blue-color">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           width="24"
